Fixes:
* ImGui:
	- Fixed RemoveElement not working on elements created with AddInputColor.
* Pathfinder:
	- Many methods that did not work properly have been fixed
	- Use Entity[Familiar/NPC]:GetPathfinder to access these fixes
	- (EntityNPC.Pathfinder has been left unaffected for existing mod compatibility)
/newline/
/versionseparator/
v1.0.12.b -
Fixes:
* Fix various regressions involving status effects introduced by 1.0.12
/newline/
/versionseparator/
v1.0.12.a -
* The changelogs menu has been revamped. Use the left and right arrow keys to look between versions.
Additions:
* Ambush:
	- [Get/Set]MaxBossChallengeWaves()
	- Allows changing the number of waves in a boss challenge room
Fixes:
* Boss challenge rooms wave count no longer accidentally tied to normal challenge room wave count (ie, now two instead of three)
/newline/
/versionseparator/
v1.0.12 -
Additions:
* Add new Vanilla Tweaks option "Console Autofill Limit", which determines the number of autocomplete items that are displayed in the debug console.
* Level:
	- CanPlaceRoom(RoomConfigRoom, int GridIndex, int Dimension = -1, bool AllowMultipleDoors = true, bool AllowSpecialNeighbors = false, bool AllowNoNeighbors = false)
		Returns true if the room would be able to fit at this location.
	- TryPlaceRoom(RoomConfigRoom, int GridIndex, int Dimension = -1, int Seed = 0, bool AllowMultipleDoors = true, bool AllowSpecialNeighbors = false, bool AllowNoNeighbors = false)
		Will only place the room if it can fit and all doors can be successfully connected to neighboring rooms.
		If successful, returns the new RoomDescriptor, returns nil otherwise.
		If a seed of nil or 0 is provided, a seed will be auto-generated based on the location, room shape, and level seed.
		Boolean params are additional safeties that can be enabled or disabled:
			AllowMultipleDoors - Set to false to only allow successful placement if the room would only have one door (for placing special rooms).