@@ -1,3 +1,4 @@
 #pragma once
 
 void ASMPatchSpawnSelectedBaby();
+void ASMPatchCoopWheelRespectModdedAchievements();
