@@ -1,0 +1,5 @@
+#pragma once
+
+// Returns false if the character is locked behind a modded achievement.
+// Does not check for vanilla ones.
+bool IsCharacterUnlockedRgon(const int playerType);
