@@ -48,6 +48,8 @@ Fixes:
 	- Many methods that did not work properly have been fixed
 	- Use Entity[Familiar/NPC]:GetPathfinder to access these fixes
 	- (EntityNPC.Pathfinder has been left unaffected for existing mod compatibility)
+* Misc:
+	- Modded characters locked behind achievements no longer appear in the local co-op wheel.
 /newline/
 /versionseparator/
 v1.0.12.b -
